--- a/net-snmp/apps/snmpnetstat/Makefile.depend
+++ b/net-snmp/apps/snmpnetstat/Makefile.depend
@@ -37,9 +37,11 @@
 ./if.lo: ../../include/net-snmp/mib_api.h
 ./if.lo: ../../include/net-snmp/library/parse.h
 ./if.lo: ../../include/net-snmp/library/oid_stash.h
+./if.lo: ../../include/net-snmp/net-snmp-features.h
 ./if.lo: ../../include/net-snmp/library/snmp_impl.h
 ./if.lo: ../../include/net-snmp/library/snmp.h
 ./if.lo: ../../include/net-snmp/library/snmp-tc.h
+./if.lo: ../../include/net-snmp/library/getopt.h
 ./if.lo: ../../include/net-snmp/utilities.h
 ./if.lo: ../../include/net-snmp/library/system.h
 ./if.lo: ../../include/net-snmp/library/tools.h
@@ -107,9 +109,11 @@
 ./inet6.lo: ../../include/net-snmp/mib_api.h
 ./inet6.lo: ../../include/net-snmp/library/parse.h
 ./inet6.lo: ../../include/net-snmp/library/oid_stash.h
+./inet6.lo: ../../include/net-snmp/net-snmp-features.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_impl.h
 ./inet6.lo: ../../include/net-snmp/library/snmp.h
 ./inet6.lo: ../../include/net-snmp/library/snmp-tc.h
+./inet6.lo: ../../include/net-snmp/library/getopt.h
 ./inet6.lo: ../../include/net-snmp/utilities.h
 ./inet6.lo: ../../include/net-snmp/library/system.h
 ./inet6.lo: ../../include/net-snmp/library/tools.h
@@ -176,9 +180,11 @@
 ./inet.lo: ../../include/net-snmp/mib_api.h
 ./inet.lo: ../../include/net-snmp/library/parse.h
 ./inet.lo: ../../include/net-snmp/library/oid_stash.h
+./inet.lo: ../../include/net-snmp/net-snmp-features.h
 ./inet.lo: ../../include/net-snmp/library/snmp_impl.h
 ./inet.lo: ../../include/net-snmp/library/snmp.h
 ./inet.lo: ../../include/net-snmp/library/snmp-tc.h
+./inet.lo: ../../include/net-snmp/library/getopt.h
 ./inet.lo: ../../include/net-snmp/utilities.h
 ./inet.lo: ../../include/net-snmp/library/system.h
 ./inet.lo: ../../include/net-snmp/library/tools.h
@@ -245,9 +251,11 @@
 ./main.lo: ../../include/net-snmp/mib_api.h
 ./main.lo: ../../include/net-snmp/library/parse.h
 ./main.lo: ../../include/net-snmp/library/oid_stash.h
+./main.lo: ../../include/net-snmp/net-snmp-features.h
 ./main.lo: ../../include/net-snmp/library/snmp_impl.h
 ./main.lo: ../../include/net-snmp/library/snmp.h
 ./main.lo: ../../include/net-snmp/library/snmp-tc.h
+./main.lo: ../../include/net-snmp/library/getopt.h
 ./main.lo: ../../include/net-snmp/utilities.h
 ./main.lo: ../../include/net-snmp/library/system.h
 ./main.lo: ../../include/net-snmp/library/tools.h
@@ -314,9 +322,11 @@
 ./route.lo: ../../include/net-snmp/mib_api.h
 ./route.lo: ../../include/net-snmp/library/parse.h
 ./route.lo: ../../include/net-snmp/library/oid_stash.h
+./route.lo: ../../include/net-snmp/net-snmp-features.h
 ./route.lo: ../../include/net-snmp/library/snmp_impl.h
 ./route.lo: ../../include/net-snmp/library/snmp.h
 ./route.lo: ../../include/net-snmp/library/snmp-tc.h
+./route.lo: ../../include/net-snmp/library/getopt.h
 ./route.lo: ../../include/net-snmp/utilities.h
 ./route.lo: ../../include/net-snmp/library/system.h
 ./route.lo: ../../include/net-snmp/library/tools.h
@@ -383,9 +393,11 @@
 ./winstub.lo: ../../include/net-snmp/mib_api.h
 ./winstub.lo: ../../include/net-snmp/library/parse.h
 ./winstub.lo: ../../include/net-snmp/library/oid_stash.h
+./winstub.lo: ../../include/net-snmp/net-snmp-features.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_impl.h
 ./winstub.lo: ../../include/net-snmp/library/snmp.h
 ./winstub.lo: ../../include/net-snmp/library/snmp-tc.h
+./winstub.lo: ../../include/net-snmp/library/getopt.h
 ./winstub.lo: ../../include/net-snmp/utilities.h
 ./winstub.lo: ../../include/net-snmp/library/system.h
 ./winstub.lo: ../../include/net-snmp/library/tools.h
