--- a/Makefile.rules
+++ b/Makefile.rules
@@ -95,6 +95,7 @@ installprogs: installbin installsbin
 # headers
 #
 # set INSTALLHEADERS to a list of things to install in each makefile.
+# set INSTALLBUILTINCLUDEHEADERS a list built and placed into include/net-snmp/
 # set INSTALLBUILTHEADERS to a list of things to install from builddir
 # set INSTALLSUBDIRHEADERS and INSTALLSUBDIR to subdirectory headers
 # set INSTALLSUBDIRHEADERS2 and INSTALLSUBDIR2 to more subdirectory headers
@@ -103,6 +104,16 @@ installprogs: installbin installsbin
 installheaders: installlocalheaders @installucdheaders@ installsubdirheaders
 
 installlocalheaders:
+	@if test "$(INSTALLBUILTINCLUDEHEADERS)" != "" ; then \
+		echo creating directory $(INSTALL_PREFIX)$(includedir) ; \
+		it="$(INSTALLBUILTINCLUDEHEADERS)" ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir)/library ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir)/agent ; \
+		for i in $$it ; do \
+			$(INSTALL_DATA) include/net-snmp/$$i $(INSTALL_PREFIX)$(includedir)/$$i ; \
+			echo "installing $$i in $(INSTALL_PREFIX)$(includedir)/$$i" ; \
+		done \
+	fi
 	@if test "$(INSTALLHEADERS)" != "" ; then \
 		echo creating directory $(INSTALL_PREFIX)$(includedir) ; \
 		it="$(INSTALLHEADERS)" ; \
