--- a/net-snmp/apps/snmpnetstat/Makefile.depend
+++ b/net-snmp/apps/snmpnetstat/Makefile.depend
@@ -64,7 +64,8 @@ ipe./if.lo: ../../include/net-snmp/library/lcd_time.h
 ipe./if.lo: ../../include/net-snmp/library/snmp_secmod.h
 ipe./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ipe./if.lo: ../../include/net-snmp/library/snmpusm.h 
-ipe./if.lo:  main.h netstat.h
+ipe./if.lo:   main.h
+ipe./if.lo: netstat.h
 ipe./inet6.lo: ../../include/net-snmp/net-snmp-config.h
 ipe./inet6.lo: ../../include/net-snmp/system/linux.h
 ipe./inet6.lo: ../../include/net-snmp/system/sysv.h
@@ -333,7 +334,7 @@ ipe./winstub.lo: ../../include/net-snmp/system/sysv.h
 ipe./winstub.lo: ../../include/net-snmp/system/generic.h
 ipe./winstub.lo: ../../include/net-snmp/machine/generic.h
 ipe./winstub.lo: ../../include/net-snmp/net-snmp-includes.h
-ipe./winstub.lo:  ../../include/net-snmp/definitions.h
+ipe./winstub.lo: ../../include/net-snmp/definitions.h
 ipe./winstub.lo: ../../include/net-snmp/types.h 
 ipe./winstub.lo: ../../include/net-snmp/library/snmp_api.h
 ipe./winstub.lo: ../../include/net-snmp/library/asn1.h
