--- a/win32/libsnmp/Makefile.in
+++ b/win32/libsnmp/Makefile.in
@@ -60,6 +60,7 @@ CLEAN :
 	-@erase "$(INTDIR)\snmpUDPIPv6Domain.obj"
 	-@erase "$(INTDIR)\snmpusm.obj"
 	-@erase "$(INTDIR)\snmpv3.obj"
+	-@erase "$(INTDIR)\strlcat.obj"
 	-@erase "$(INTDIR)\strlcpy.obj"
 	-@erase "$(INTDIR)\system.obj"
 	-@erase "$(INTDIR)\tools.obj"
@@ -164,6 +165,7 @@ LIB32_OBJS= \
 	"$(INTDIR)\snmpUDPIPv6Domain.obj" \
 	"$(INTDIR)\snmpusm.obj" \
 	"$(INTDIR)\snmpv3.obj" \
+	"$(INTDIR)\strlcat.obj" \
 	"$(INTDIR)\strlcpy.obj" \
 	"$(INTDIR)\system.obj" \
 	"$(INTDIR)\tools.obj" \
@@ -229,6 +231,7 @@ CLEAN :
 	-@erase "$(INTDIR)\snmpUDPIPv6Domain.obj"
 	-@erase "$(INTDIR)\snmpusm.obj"
 	-@erase "$(INTDIR)\snmpv3.obj"
+	-@erase "$(INTDIR)\strlcat.obj"
 	-@erase "$(INTDIR)\strlcpy.obj"
 	-@erase "$(INTDIR)\system.obj"
 	-@erase "$(INTDIR)\tools.obj"
@@ -334,6 +337,7 @@ LIB32_OBJS= \
 	"$(INTDIR)\snmpUDPIPv6Domain.obj" \
 	"$(INTDIR)\snmpusm.obj" \
 	"$(INTDIR)\snmpv3.obj" \
+	"$(INTDIR)\strlcat.obj" \
 	"$(INTDIR)\strlcpy.obj" \
 	"$(INTDIR)\system.obj" \
 	"$(INTDIR)\tools.obj" \
@@ -628,6 +632,12 @@ SOURCE=..\..\snmplib\snmpusm.c
 SOURCE=..\..\snmplib\snmpv3.c
 
 "$(INTDIR)\snmpv3.obj" : $(SOURCE) "$(INTDIR)"
+	$(CPP) $(CPP_PROJ) $(SOURCE)
+
+
+SOURCE=..\..\snmplib\strlcat.c
+
+"$(INTDIR)\strlcat.obj" : $(SOURCE) "$(INTDIR)"
 	$(CPP) $(CPP_PROJ) $(SOURCE)
 
 
