--- a/win32/libsnmp_dll/Makefile.in
+++ b/win32/libsnmp_dll/Makefile.in
@@ -61,6 +61,7 @@ CLEAN :
 	-@erase "$(INTDIR)\snmpUDPIPv6Domain.obj"
 	-@erase "$(INTDIR)\snmpusm.obj"
 	-@erase "$(INTDIR)\snmpv3.obj"
+	-@erase "$(INTDIR)\strlcat.obj"
 	-@erase "$(INTDIR)\strlcpy.obj"
 	-@erase "$(INTDIR)\system.obj"
 	-@erase "$(INTDIR)\tools.obj"
@@ -172,6 +173,7 @@ LINK32_OBJS= \
 	"$(INTDIR)\snmpUDPIPv6Domain.obj" \
 	"$(INTDIR)\snmpusm.obj" \
 	"$(INTDIR)\snmpv3.obj" \
+	"$(INTDIR)\strlcat.obj" \
 	"$(INTDIR)\strlcpy.obj" \
 	"$(INTDIR)\system.obj" \
 	"$(INTDIR)\tools.obj" \
@@ -237,6 +239,7 @@ CLEAN :
 	-@erase "$(INTDIR)\snmpUDPIPv6Domain.obj"
 	-@erase "$(INTDIR)\snmpusm.obj"
 	-@erase "$(INTDIR)\snmpv3.obj"
+	-@erase "$(INTDIR)\strlcat.obj"
 	-@erase "$(INTDIR)\strlcpy.obj"
 	-@erase "$(INTDIR)\system.obj"
 	-@erase "$(INTDIR)\tools.obj"
@@ -350,6 +353,7 @@ LINK32_OBJS= \
 	"$(INTDIR)\snmpUDPIPv6Domain.obj" \
 	"$(INTDIR)\snmpusm.obj" \
 	"$(INTDIR)\snmpv3.obj" \
+	"$(INTDIR)\strlcat.obj" \
 	"$(INTDIR)\strlcpy.obj" \
 	"$(INTDIR)\system.obj" \
 	"$(INTDIR)\tools.obj" \
@@ -644,6 +648,12 @@ SOURCE=..\..\snmplib\snmpusm.c
 SOURCE=..\..\snmplib\snmpv3.c
 
 "$(INTDIR)\snmpv3.obj" : $(SOURCE) "$(INTDIR)"
+	$(CPP) $(CPP_PROJ) $(SOURCE)
+
+
+SOURCE=..\..\snmplib\strlcat.c
+
+"$(INTDIR)\strlcat.obj" : $(SOURCE) "$(INTDIR)"
 	$(CPP) $(CPP_PROJ) $(SOURCE)
 
 
