--- a/configure.in
+++ b/configure.in
@@ -2729,7 +2729,7 @@ if test "x$tryopenssl" != "xno"; then
               LIBCRYPTO="-lcrypto")
       AC_CHECK_LIB(crypto, AES_cfb128_encrypt, 
               AC_DEFINE(HAVE_AES_CFB128_ENCRYPT, 1, [Define to 1 if you have the `AES_cfb128_encrypt' function.]))
-      AC_CHECK_LIB(${CRYPTO}, EVP_MD_CTX_create,
+      AC_CHECK_LIB(crypto, EVP_MD_CTX_create,
           AC_DEFINE([HAVE_EVP_MD_CTX_CREATE], [],
               [Define to 1 if you have the `EVP_MD_CTX_create' function.])
           AC_DEFINE([HAVE_EVP_MD_CTX_DESTROY], [],
