--- a/net-snmp-config.in
+++ b/net-snmp-config.in
@@ -601,15 +601,17 @@ EOF
       cmd="@CC@ $cflags @CFLAGS@ @DEVFLAGS@ -I. -I${NSC_INCLUDEDIR} -o $outname $tmpfile $cfiles $NSC_LDFLAGS $NSC_LIBDIR $NSC_BASE_AGENT_LIBS $NSC_AGENTLIBS $ldflags"
       echo "running: $cmd"
       `$cmd`
+      result=$?
       if test "x$norm" != "x1" ; then
         echo "removing the temporary code file: $tmpfile"
         rm -f $tmpfile
       else
         echo "leaving the temporary code file: $tmpfile"
       fi
-      if test -f $outname ; then
+      if test "$result" = "0" -a -f "$outname" ; then
         echo "subagent program $outname created"
       fi
+      exit $result
       ;;
 
     *)
